# anvill

./: .gitignore  .gitmodules  .remill_commit_id  BITCODE.cpp  Bitcode.cpp  CMakeLists.txt  CMakeLists_vcpkg.txt  CMakePresets.json  Dockerfile  JSON.cpp  LICENSE  README.md  out_opt.ll  setup.py
anvill/: CMakeLists.txt
anvill/include/anvill/: ABI.h  Analyze.h  Decl.h  IEntityLifter.h  ILifterOptions.h  IProgram.h  ITypeSpecification.h  InstructionLifter.h  IntrinsicTable.h  MCToIRLifter.h  Optimize.h  PointerLifter.h  Program.h  Result.h  Transforms.h  Type.h  TypeParser.h  TypePrinter.h  TypeSpecification.h  Util.h  Version.h
anvill/lib/: RecoverMemRefs.cpp  TypePrinter.cpp
anvill/lib/Version/: CMakeLists.txt
anvill/plugins/ida/: anvill.py
anvill/python/: CMakeLists.txt  install.cmake
anvill/python/anvill/: __init__.py  __main__.py  arch.py  binja.py  exc.py  function.py  ida.py  loc.py  mem.py  os.py  program.py  type.py  util.py  var.py
anvill/src/: ABI.cpp  Analyze.cpp  Decl.cpp  IntrinsicTable.cpp  Lift.cpp  MCToIRLifter.cpp  Optimize.cpp  PointerLifter.cpp  Program.cpp  Program.h  RecoverMemRefs.cpp  Type.cpp  TypeParser.cpp  TypePrinter.cpp  TypeSpecification.cpp  TypeSpecification.h  Util.cpp
anvill/src/Analysis/: CrossReferenceResolver.cpp  Utils.cpp
anvill/src/Arch/: AArch32_C.cpp  AArch64_C.cpp  AllocationState.cpp  AllocationState.h  Arch.cpp  Arch.h  SPARC32_C.cpp  SPARC64_C.cpp  X86_64_SysV.cpp  X86_C.cpp  X86_FastCall.cpp  X86_StdCall.cpp  X86_ThisCall.cpp
anvill/src/Common/: LifterOptions.cpp  LifterOptions.h  Result.h
anvill/src/Decl/: Decl.h  FunctionDecl.cpp  FunctionDecl.h  GlobalVarDecl.cpp  GlobalVarDecl.h  ParameterDecl.cpp  ParameterDecl.h  TypedRegisterDecl.h  ValueDecl.cpp  ValueDecl.h
anvill/src/Lifters/: Context.cpp  Context.h  DataLifter.cpp  DataLifter.h  DeclLifter.cpp  DeclLifter.h  EntityLifter.cpp  EntityLifter.h  FunctionLifter.cpp  FunctionLifter.h  Options.cpp  ValueLifter.cpp  ValueLifter.h
anvill/src/Program/: Byte.cpp  Byte.h  ByteSequence.cpp  ByteSequence.h  Program.cpp  Program.h
anvill/src/Providers/: ControlFlowProvider.cpp  ControlFlowProvider.h  FunctionPrototypeProvider.cpp  IMemoryProvider.cpp  IMemoryProvider.h  ITypeProvider.cpp  MemoryProvider.cpp  NullMemoryProvider.h  NullTypeProvider.cpp  NullTypeProvider.h  ProgramMemoryProvider.cpp  ProgramMemoryProvider.h  ProgramTypeProvider.cpp  ProgramTypeProvider.h  TypeProvider.cpp
anvill/src/Transforms/: BrightenPointerOperations.cpp  LowerRemillMemoryAccessIntrinsics.cpp  RemoveCompilerBarriers.cpp  RemoveRemillFunctionReturns.cpp  RemoveUnusedFPClassificationCalls.cpp  SinkSelectionsIntoBranchTargets.cpp  SplitStackFrameAtReturnAddress.cpp  Utils.cpp  Utils.h
anvill/tests/: CMakeLists.txt
anvill/tests/anvill_passes/: CMakeLists.txt
anvill/tests/src/: Result.cpp  TypeSpecification.cpp  main.cpp
anvill/tests/tools/: CMakeLists.txt
lib/: ABI.cpp  AllocationState.cpp  AllocationState.h  Analyze.cpp  Arch.cpp  CMakeLists.txt  CrossReferenceFolder.cpp  CrossReferenceResolver.cpp  Decl.cpp  Declarations.cpp  Decls.cpp  JSON.cpp  LegacyLift.cpp  Lift.cpp  Lift.h  Lift2.cpp  MCToIRLifter.cpp  Optimize.cpp  Program.cpp  Protobuf.cpp  Protobuf.h  RecoverMemRefs.cpp  Specification.cpp  Specification.h  Transforms.cpp  Type.cpp  TypeParser.cpp  TypePrinter.cpp  Util.cpp  Utils.cpp  Version.cpp.in
lib/Arch/: AArch32_C.cpp  AArch64_C.cpp  AllocationState.cpp  AllocationState.h  Arch.cpp  Arch.h  PPC_C.cpp  PPC_SysV.cpp  SPARC32_C.cpp  SPARC64_C.cpp  StubABI.cpp  X86_64_SysV.cpp  X86_C.cpp  X86_FastCall.cpp  X86_StdCall.cpp  X86_ThisCall.cpp
lib/Lifters/: BasicBlockLifter.cpp  BasicBlockLifter.h  BasicBlockTransform.cpp  BasicBlockTransform.h  CodeLifter.cpp  CodeLifter.h  DataLifter.cpp  DataLifter.h  EntityLifter.cpp  EntityLifter.h  FunctionLifter.cpp  FunctionLifter.h  Options.cpp  ValueLifter.cpp  ValueLifter.h
lib/Passes/: BranchAnalysis.cpp  BranchRecovery.cpp  BranchRecovery.h  BrightenPointerOperations.cpp  CodeQualityStatCollector.cpp  CombineAdjacentShifts.cpp  Constraints.cpp  ConvertAddressesToEntityUses.cpp  ConvertIntegerToPointerOperations.cpp  ConvertMasksToCasts.cpp  ConvertPointerArithmeticToGEP.cpp  ConvertSymbolicReturnAddressToConcreteReturnAddress.cpp  ConvertXorToCmp.cpp  ConvertXorsToCmps.cpp  HoistUsersOfSelectsAndPhis.cpp  InlineBasicBlockFunctions.cpp  InlineBasicBlocks.cpp  InstructionFolderPass.cpp  JumpTableAnalysis.cpp  LowerRemillMemoryAccessIntrinsics.cpp  LowerRemillUndefinedIntrinsics.cpp  LowerSwitchIntrinsics.cpp  LowerTypeHintIntrinsics.cpp  PropagateTypeAnnotations.cpp  RecoverBasicStackFrame.cpp  RecoverEntityUseInformation.cpp  RecoverStackFrameInformation.cpp  RemoveAnvillReturns.cpp  RemoveAssignmentsToNextPC.cpp  RemoveCallIntrinsics.cpp  RemoveCompilerBarriers.cpp  RemoveDelaySlotIntrinsics.cpp  RemoveErrorIntrinsics.cpp  RemoveRemillFunctionReturns.cpp  RemoveStackPointerCExprs.cpp  RemoveStackPointerCExprs.h  RemoveTrivialPhisAndSelects.cpp  RemoveUnusedBranchHints.cpp  RemoveUnusedFPClassificationCalls.cpp  RemoveUnusedFPClassificationCalls.h  (+16 more)
lib/Providers/: ControlFlowProvider.cpp  MemoryProvider.cpp  TypeProvider.cpp
lib/Version/: CMakeLists.txt  Version.cpp.in
libraries/anvill_passes/: CMakeLists.txt
libraries/anvill_passes/src/: BaseFunctionPass.cpp  BaseFunctionPass.h  BranchAnalysis.cpp  BranchRecovery.cpp  BranchRecovery.h  BrightenPointerOperations.cpp  BrightenPointerOperations.h  ConstraintExtractor.cpp  Constraints.cpp  ConvertMasksToCasts.cpp  ConvertXorToCmp.cpp  ConvertXorToCmp.h  IndirectJumpPass.h  InstructionFolderPass.cpp  InstructionFolderPass.h  JumpTableAnalysis.cpp  JumpTableAnalysis.h  LowerRemillMemoryAccessIntrinsics.cpp  LowerTypeHintIntrinsics.cpp  (+41 more)
libraries/magic_enum/: CMakeLists.txt
libraries/version/: CMakeLists.txt
tests/tools/: CMakeLists.txt
tools/: CMakeLists.txt
tools/ExternalFunctionAuto-Completion/: README.md  generate_glibc_dict.py
tools/decompile-json/: CMakeLists.txt
tools/pointer-lifter/: CMakeLists.txt
tools/specify-bitcode/: CMakeLists.txt
(+429 files in other folders)
